# pipecat-hackathon

./: GEMINI.md  README.md
client/: .env.example  README.md  package-lock.json  package.json
client/app/: PipecatProvider.tsx  layout.tsx  page.tsx
otel/: README.md  clickhouse-init.sql  docker-compose.yml  start-langfuse.sh
otel/docs/: 01_outline.md  02_langfuse_docker_setup.md  03_otel_authentication_issues.md  04_sdk_integration.md  05_best_practices.md
otel/logs/: 01_pipecat_stability_fixes_report.md
server/: .gitignore  README.md  audio_recorder.py  bot.py  env.example  pyproject.toml  test_ai_copilot.py  test_langfuse.py  test_mcp.py  test_mcplabs.py  test_otel.py  test_voice_agent.py  voice_recorder.py
tests/: __init__.py  test_event_loop_stability.py  test_langfuse_integration.py
